WIP POC: Fix wrapping glich with temporary block style
Dynamically add/remove block styling on pre-open nails, to avoid a browser bug
where text wrapping breaks a line just after a post-open nail, causing an ugly
"split border" effect.

TODO Decide the following:
1. Whether dynamic restyling is viable at all (or is there another way?)

2. Whether a block styled image inside a block is viable (it's apparently legal
in HTML+RDFa, but does splitting the block create more trouble than it solves?)

3. When exactly the reflow test should be applied

ve.ce.Surface#fixupLinks:
* fixupLinks: block style the pre-open nail of each wrapped link
* call fixupLinks after keydown / on surface observer change

ve.ce.LinkAnnotation.css:
* (debug) Style nails so they're visible and unambiguous (TODO remove)

demo/ve/pages/h1.html:
* (debug) Put link in simplest demo page (TODO remove)

--- a/src/ce/styles/annotations/ve.ce.LinkAnnotation.css
+++ b/src/ce/styles/annotations/ve.ce.LinkAnnotation.css
@@ -4,8 +4,32 @@
  * @copyright 2011-2015 VisualEditor Team and others; see http://ve.mit-license.org
  */
 
-.ve-ce-linkAnnotation-active {
+.ve-ce-linkAnnotation-active, .ve-ce-linkAnnotation {
 	box-shadow: 0 0 0 0.125em rgba(22,55,200,0.75);
 	border-radius: 0.125em;
 	text-decoration: none;
+}
+
+.ve-ce-nail {
+	width: 0;
+	height: 0;
+	margin: 0;
+	border: 0;
+	outline: 0;
+}
+
+.ve-ce-nail.ve-ce-nail-pre-open {
+	box-shadow : 0 0 0 0.125em  red;
+}
+
+.ve-ce-nail.ve-ce-nail-post-open {
+	box-shadow : 0 0 0 0.125em  #aa0;
+}
+
+.ve-ce-nail.ve-ce-nail-pre-close {
+	box-shadow : 0 0 0 0.125em  green;
+}
+
+.ve-ce-nail.ve-ce-nail-post-close {
+	box-shadow : 0 0 0 0.125em  purple;
 }
